# ogg-vag-transcoder

./: Cargo.toml  README.md
src/: main.rs
src/logging/: logging.rs
src/vag/: encoder.rs  mod.rs  vag.rs
